--- a/lib/PDL/Opt/GLPK.pod
+++ b/lib/PDL/Opt/GLPK.pod
@@ -569,14 +569,26 @@ Problem has no unbounded solution.
 
 This function cannot broadcast over higher dimensions.
 
+=head1 AUTHOR
+
+Jörg Sommrey
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2024 Jörg Sommrey
+
+This library is free software; you may redistribute it and/or
+modify it under the terms of the GNU GENERAL PUBLIC LICENSE Version 3.
+See COPYING.
+
 =head1 SEE ALSO
 
-On GLPK in the Octave Manual:
+The Octave Manual:
 L<https://docs.octave.org/latest/Linear-Programming.html>
 
 The Gnu Linear Programming Kit:
 L<https://www.gnu.org/software/glpk/>
 
-The GLPK reference manual is included in the distribution.
+The GLPK reference manual is included in the GLPK distribution.
 
 =cut
