--- a/lib/PDL/Opt/GLPK.pod
+++ b/lib/PDL/Opt/GLPK.pod
@@ -599,7 +599,7 @@ See COPYING.
 The Octave Manual:
 L<https://docs.octave.org/latest/Linear-Programming.html>
 
-The Gnu Linear Programming Kit:
+The GNU Linear Programming Kit:
 L<https://www.gnu.org/software/glpk/>
 
 The GLPK reference manual is included in the GLPK distribution.
