--- a/lib/PDL/Opt/GLPK.pod
+++ b/lib/PDL/Opt/GLPK.pod
@@ -10,7 +10,7 @@ PDL::Opt::GLPK - PDL interface to the GNU Linear Programming Kit
 
 =head1 SYNOPSIS
 
- use PDL::OPT::GLPK;
+ use PDL::Opt::GLPK;
 
  glpk($c, $a, $b $lb, $ub, $ctype, $vtype, GLP_MAX,
 	$xopt = null, $fopt = null, $errno = null, $status = null, $lambda = null,
@@ -30,7 +30,7 @@ This is an example from the GLPK documentation.
 
 Solving this using C<glpk>:
 
- use PDL::OPT::GLPK;
+ use PDL::Opt::GLPK;
 
  $a = pdl('[1 1 1] [10 4 5] [2 2 6]');
  $b = pdl('[100 600 300]');
